--- a/hs2college.html
+++ b/hs2college.html
@@ -13,7 +13,7 @@
       .start{
         display:inline-block;
         background-image:url("https://i.pinimg.com/originals/8c/bf/13/8cbf1357a9d4f53b9d7edbb982b62195.jpg");
-        color: #FF0000;
+        color: #FFFFFF;
       }
 
       header{
