--- a/hs2college.html
+++ b/hs2college.html
@@ -73,7 +73,7 @@
     <div class="start">
       <div class="col-sm-12 col-md-5" id="pic">
         <div>
-          <img src="VC_Flaps.jpg" alt="My vice captain flaps" width="100%">
+          <img src="VC_Flaps.JPG" alt="My vice captain flaps" width="100%">
         </div>
       </div>
       <div class="col-sm-12 col-md-5" id="text">
@@ -88,7 +88,7 @@
         <img src="C_Flaps.png" alt="My captain flaps" width="100%">
       </div>
       <div class="col-sm-12" id="pic3">
-        <img src="Medals.jpg" alt="The medals I got in my 12th grade" width="75%">
+        <img src="Medals.JPG" alt="The medals I got in my 12th grade" width="75%">
       </div>
     </div>
   </body>
