--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <h3>About Me</h3>
         </div>
         <div>
-          <p>Hi, my name is Sai Madhusudhana Karthikeya Kadali. I know it's a long name and please just call me Karthik. Welcome to my webpage. Here I will tell things from my life, all that happened from when I was to the present I have created this webpage. In this page, I will share my CV.</p>
+          <p>Hi, my name is Sai Madhusudhana Karthikeya Kadali. I know it's a long name and please just call me Karthik. Welcome to my webpage. Here I will tell things from my life, all that happened from when I was born to the present I have created this webpage. In this page, I will share my CV.</p>
         </div>
         <div>
           <h3>Birth Details</h3>
