--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <h3>Family Details</h3>
         </div>
         <div>
-          <p>My father's name is Vijay Kumar. He is a retired software engineer. My mother's name is Haritha (alias) Someswari. She is home-maker. I have an elder sister. Her name is Kavya. She completed her M.Sc in the corona strucken year. Yup if you are thinking tough luck, oh yeah, you can say that again!!</p>
+          <p>My father's name is Vijay Kumar. He is a retired software engineer. My mother's name is Someswari (alias) Haritha. She is home-maker. I have an elder sister. Her name is Kavya. She completed her M.Sc in the corona strucken year. Yup if you are thinking tough luck, oh yeah, you can say that again!!</p>
         </div>
         <div>
           <h3>Academic Achievements</h3>
