--- a/hs2college.html
+++ b/hs2college.html
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse" id="list">
           <ul class="navbar-nav text-center ml-auto">
             <li class="nav-item">
-              <a href="home.html" class="nav-link"> Home</a>
+              <a href="link.html" class="nav-link"> Home</a>
             </li>
             <li class="nav-item">
               <a href="birth2ms.html" class="nav-link"> Birth to Middle School</a>
